Fixed chart spacing

--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 
 .top {
-    padding: 45px;
+    padding: 30px;
     background: rgba(29,29,31,0.6);
     text-align: center;
 }
@@ -67,7 +67,7 @@
     display: flex;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 30px;
-    width: 600px;
+    width: 27%;
     /* position: sticky; */
     /* height: 800px; */
 }
@@ -179,6 +179,12 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: flex-start;
+    min-height: 130px;
+}
+
+.news-item:hover {
+    background-color: rgba(29,29,31,0.6);
+    cursor: pointer;
 }
 
 .news-item-title {
@@ -188,4 +194,11 @@
 .news-item-img {
     margin-left: 30px;
     max-width: 200px;
+}
+
+.chart {
+    width: 100px;
+    height: 200px;
+    overflow: hidden;
+    display: flex;
 }
